--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -147,3 +147,165 @@ hr {
       
     }
   }
+
+  #demo {
+    height: 100vh;
+    background-color: $primary;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    div {
+        /* width: 50%; */
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        animation: HeroAnimation 3s 0.1s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
+        opacity: 0;
+
+        &.container {
+          flex-flow: column;
+
+          h1 {
+            align-self: flex-end;
+          }
+
+          a {
+            align-self: flex-start;
+          }
+
+          .disclaimer {
+            padding-bottom: 5%;
+            width: 60%;
+
+            a {
+              font-weight: 700;
+              border: 0;
+              border-radius: 0;
+              padding: 1%;
+            }
+          }
+        }
+
+        h1 {
+            color: rgba(255,255,255,1);
+            font-size: 120px;
+            font-family: $header;
+            font-weight: 600;
+            align-self: center;
+            justify-self: flex-end;
+            padding-right: 15px;
+        }
+
+        h2 {
+            color: rgba(255,255,255,0.8);
+            font-size: 25px;
+            font-family: $header;
+            align-self: center;
+            justify-self: flex-start;
+            font-weight: 300;
+        }
+
+        a {
+          padding: 8px 20px;
+          background-color: transparent;
+          font-size: 20px;
+          border-radius: 10px;
+          border: 3px solid #FFF;
+          color: #FFF;
+          font-weight: 700;
+          outline: none;
+          cursor: pointer;
+          -webkit-transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+          transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+
+          &:hover {
+            background: #FFF;
+            -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+                    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+            -webkit-transform: translateY(-3px);
+                    transform: translateY(-3px);
+            color: #ED5565;
+        }
+      }
+    }
+}
+
+  #fournotfound {
+    height: 100vh;
+    background-color: $primary;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    div {
+        /* width: 50%; */
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        animation: HeroAnimation 3s 0.1s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
+        opacity: 0;
+
+        &.container {
+          flex-flow: column;
+          height: 25%;
+
+          h1 {
+            align-self: flex-end;
+          }
+
+          a {
+            align-self: flex-start;
+          }
+
+          .disclaimer {
+            padding-bottom: 5%;
+            width: 60%;
+          }
+        }
+
+        h1 {
+            color: rgba(255,255,255,1);
+            font-size: 120px;
+            font-family: $header;
+            font-weight: 600;
+            align-self: center;
+            justify-self: flex-end;
+            padding-right: 15px;
+        }
+
+        h2 {
+            color: rgba(255,255,255,0.8);
+            font-size: 25px;
+            font-family: $header;
+            align-self: center;
+            justify-self: flex-start;
+            font-weight: 300;
+        }
+
+        a {
+          padding: 8px 20px;
+          background-color: transparent;
+          font-size: 20px;
+          border-radius: 10px;
+          border: 3px solid #FFF;
+          color: #FFF;
+          font-weight: 700;
+          outline: none;
+          cursor: pointer;
+          -webkit-transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+          transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+
+          &:hover {
+            background: #FFF;
+            -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+                    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+            -webkit-transform: translateY(-3px);
+                    transform: translateY(-3px);
+            color: #ED5565;
+        }
+      }
+    }
+}
