--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -17,6 +17,11 @@ sans-serif;
 $header: 'Poppins',
 sans-serif;
 
+html {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -225,6 +230,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 5% 0;
 
   div {
     p {
